# jiradc-cli

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: COMMAND_REFERENCE.md  DEVELOPMENT_NOTES.md  PROJECT_OVERVIEW.md  PUBLISHING.md
jiradc_cli/: __init__.py  client.py  config.py  main.py
resources/: jira.10000.postman.txt  jira_software_dc_10000_swagger.v3.txt
