[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jiradc-cli"
version = "0.2.0"
description = "Typer CLI for Jira Data Center using browser session cookies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "typer>=0.12.0",
]
keywords = ["jira", "jira-data-center", "cli", "typer", "sso", "cookie-auth"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/marcosgalleterobbva/jiradc-cli"
Repository = "https://github.com/marcosgalleterobbva/jiradc-cli"
Issues = "https://github.com/marcosgalleterobbva/jiradc-cli/issues"

[project.optional-dependencies]
release = [
  "build>=1.2.2",
  "bump-my-version>=1.2.0",
  "twine>=5.1.1",
]

[project.scripts]
jiradc = "jiradc_cli.main:main"

[tool.setuptools.packages.find]
include = ["jiradc_cli*"]

[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
commit = false
message = "Bump version: {current_version} -> {new_version}"
commit_args = ""
files = [
  { filename = "pyproject.toml" },
  { filename = "jiradc_cli/__init__.py" },
]
